Improve parsing and add unit tests for store and commands